[gd_scene load_steps=15 format=3 uid="uid://brg3g1el27t1m"]

[ext_resource type="Script" path="res://play.gd" id="1_g78od"]
[ext_resource type="Texture2D" uid="uid://bonia47ok7vja" path="res://final2566/final2566/bg/BG_03/Layers/Sky.png" id="1_ral1t"]
[ext_resource type="Texture2D" uid="uid://jho8co0757oh" path="res://final2566/final2566/bg/BG_03/Layers/BG.png" id="1_rvo3i"]
[ext_resource type="Texture2D" uid="uid://coqi3idmy82bl" path="res://final2566/final2566/bg/BG_03/Layers/Middle.png" id="3_yrt5b"]
[ext_resource type="Texture2D" uid="uid://blysynid62hj6" path="res://final2566/final2566/bg/BG_03/Layers/Foreground.png" id="4_8hid2"]
[ext_resource type="Texture2D" uid="uid://o0ygub1onanv" path="res://final2566/final2566/bg/BG_03/Layers/Ground_01.png" id="5_atoit"]
[ext_resource type="Texture2D" uid="uid://5hr0a5yuwekg" path="res://final2566/final2566/objects/santa2.png" id="6_gfu2u"]
[ext_resource type="PackedScene" uid="uid://dd8xriau66fow" path="res://player.tscn" id="6_n0ijt"]
[ext_resource type="Script" path="res://Santa1.gd" id="7_c4u5o"]
[ext_resource type="Script" path="res://Santa2.gd" id="8_n0o0e"]
[ext_resource type="FontFile" uid="uid://ch47kbvp6hq1f" path="res://final2566/final2566/font/PWHappyChristmas.ttf" id="10_rdpy6"]
[ext_resource type="Texture2D" uid="uid://ryja1ju7s12s" path="res://final2566/final2566/gui/BTN_Red.png" id="11_ldof7"]
[ext_resource type="Texture2D" uid="uid://osjj0853pwqu" path="res://final2566/final2566/gui/Star_01.png" id="12_6j6eq"]
[ext_resource type="AudioStream" uid="uid://c6t4ppofo3xds" path="res://final2566/final2566/sound/Merry Christmas (Instrumental).mp3" id="14_nxuf5"]

[node name="PlayScene" type="Node2D"]
script = ExtResource("1_g78od")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="1" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 0)

[node name="bg1" type="Sprite2D" parent="ParallaxBackground/1"]
position = Vector2(768.917, 378.7)
scale = Vector2(0.800087, 0.704259)
texture = ExtResource("1_ral1t")

[node name="2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 0)

[node name="2" type="Sprite2D" parent="ParallaxBackground/2"]
position = Vector2(768, 355)
scale = Vector2(0.80055, 0.656482)
texture = ExtResource("1_rvo3i")

[node name="3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 0)

[node name="3" type="Sprite2D" parent="ParallaxBackground/3"]
position = Vector2(764.549, 422.5)
scale = Vector2(0.799428, 0.812037)
texture = ExtResource("3_yrt5b")

[node name="4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 0)

[node name="bg4" type="Sprite2D" parent="ParallaxBackground/4"]
position = Vector2(767.549, 392)
scale = Vector2(0.805679, 0.714815)
texture = ExtResource("3_yrt5b")

[node name="5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 0)

[node name="5" type="Sprite2D" parent="ParallaxBackground/5"]
position = Vector2(779.545, 530.25)
scale = Vector2(0.807766, 0.98287)
texture = ExtResource("4_8hid2")

[node name="6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1536, 0)

[node name="6" type="Sprite2D" parent="ParallaxBackground/6" groups=["world"]]
position = Vector2(769, 732)
scale = Vector2(0.799899, 0.605473)
texture = ExtResource("5_atoit")

[node name="Santa1" type="Sprite2D" parent="." groups=["santa"]]
position = Vector2(2809, 146)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_gfu2u")
script = ExtResource("7_c4u5o")

[node name="Santa2" type="Sprite2D" parent="." groups=["santa"]]
position = Vector2(-193, 339)
rotation = 3.14159
scale = Vector2(0.15, -0.15)
texture = ExtResource("6_gfu2u")
script = ExtResource("8_n0o0e")

[node name="Player" parent="." instance=ExtResource("6_n0ijt")]
position = Vector2(1517, 1014)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-110.507, -1508.35)
offset = Vector2(30, -130)
zoom = Vector2(0.7, 0.62)
rotation_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 80.0
offset_top = 6.0
offset_right = 281.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_rdpy6")
theme_override_font_sizes/font_size = 50

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 1060.0
offset_top = 11.0
offset_right = 1250.0
offset_bottom = 139.0
scale = Vector2(0.4, 0.4)
icon = ExtResource("11_ldof7")
flat = true

[node name="Label" type="Label" parent="CanvasLayer/Button"]
layout_mode = 0
offset_left = -20.0
offset_top = 8.0
offset_right = 220.0
offset_bottom = 114.0
theme_override_fonts/font = ExtResource("10_rdpy6")
theme_override_font_sizes/font_size = 80
text = "X"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 973.0
offset_top = 11.0
offset_right = 1163.0
offset_bottom = 139.0
scale = Vector2(0.4, 0.4)
icon = ExtResource("11_ldof7")
flat = true

[node name="Label" type="Label" parent="CanvasLayer/Button2"]
layout_mode = 0
offset_left = -20.0
offset_top = 8.0
offset_right = 220.0
offset_bottom = 114.0
theme_override_fonts/font = ExtResource("10_rdpy6")
theme_override_font_sizes/font_size = 50
text = "MENU"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Star01" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(34.0001, 37)
scale = Vector2(0.319999, 0.319999)
texture = ExtResource("12_6j6eq")

[node name="sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_nxuf5")
max_distance = 50000.0

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
